--- a/src/web/html_templates/view.html
+++ b/src/web/html_templates/view.html
@@ -1,14 +1,246 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title></title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>{{.Title}}</title>
+
+    <!-- Bootstrap Core CSS file -->
+    <link rel="stylesheet" type="text/css" href="../web/css/bootstrap.min.css">
+
+    <!-- Override CSS file - add your own CSS rules -->
+    <link rel="stylesheet" type="application/javascript" href="../web/css/styles.css">
+
+    <!-- Conditional comment containing JS files for IE6 - 8 -->
+    <!--[if lt IE 9]>
+    <script src="../js/html5.js"></script>
+    <script src="../js/respond.min.js"></script>
+    <![endif]-->
 </head>
 <body>
-    <h1>{{.Title}}</h1>
 
-    <p>[<a href="/edit/{{.Title}}">edit</a>]</p>
+<!-- Navigation -->
+<nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+    <div class="container-fluid">
 
-    <div>{{printf "%s" .Body}}</div>
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Bridges Goes to Sea</a>
+        </div>
+        <!-- /.navbar-header -->
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="#">Nav item 1</a></li>
+                <li><a href="#">Nav item 2</a></li>
+                <li><a href="#">Nav item 3</a></li>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+</nav>
+<!-- /.navbar -->
+
+<!-- Page Content -->
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="page-header">
+                <h1>{{.Title}}</h1>
+                <p>Posted by <a href="#">{{.PosterName}}</a> on <span class="glyphicon glyphicon-time"></span> 12 January 2015 10:00 am</p>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- /.row -->
+
+    <div class="row">
+        <div class="col-sm-8">
+            {{.Content}}
+
+            <!-- Comments -->
+            <h3>Comments</h3>
+            <div class="well">
+                <div class="media">
+                    <div class="media-left">
+                        <img src="http://placehold.it/70x70" alt="">
+                    </div>
+                    <div class="media-body">
+                        <h4 class="margin-t-0"><a href="#">Mayahuel Rodriguez</a></h4>
+                        <p><a href="#">12 January 2015 11:13 pm</a></p>
+                        <p>Lorem ipsum dolor sit amet consect etuer adipi scing elit sed diam nonummy nibh euismod tinunt ut laoreet dolore magna aliquam erat volut</p>
+                        <p>
+                            <button class="btn btn-sm btn-default">
+                                <span class="glyphicon glyphicon-thumbs-up"></span> Upvote
+                            </button>
+                            <button class="btn btn-sm btn-default">
+                                <span class="glyphicon glyphicon-thumbs-down"></span> Downvote
+                            </button>
+                            <button class="btn btn-sm btn-default">
+                                <span class="glyphicon glyphicon-comment"></span> Reply
+                            </button>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="well">
+                <div class="media">
+                    <div class="media-left">
+                        <img src="http://placehold.it/70x70" alt="">
+                    </div>
+                    <div class="media-body">
+                        <h4 class="margin-t-0"><a href="#">Mayahuel Rodriguez</a></h4>
+                        <p><a href="#">12 January 2015 11:13 pm</a></p>
+                        <p>Lorem ipsum dolor sit amet consect etuer adipi scing elit sed diam nonummy nibh euismod tinunt ut laoreet dolore magna aliquam erat volut</p>
+                        <p>
+                            <button class="btn btn-sm btn-default">
+                                <span class="glyphicon glyphicon-thumbs-up"></span> Upvote
+                            </button>
+                            <button class="btn btn-sm btn-default">
+                                <span class="glyphicon glyphicon-thumbs-down"></span> Downvote
+                            </button>
+                            <button class="btn btn-sm btn-default">
+                                <span class="glyphicon glyphicon-comment"></span> Reply
+                            </button>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="well">
+                <div class="media">
+                    <div class="media-left">
+                        <img src="http://placehold.it/70x70" alt="">
+                    </div>
+                    <div class="media-body">
+                        <h4 class="margin-t-0"><a href="#">Mayahuel Rodriguez</a></h4>
+                        <p><a href="#">12 January 2015 11:13 pm</a></p>
+                        <p>Lorem ipsum dolor sit amet consect etuer adipi scing elit sed diam nonummy nibh euismod tinunt ut laoreet dolore magna aliquam erat volut</p>
+                        <p>
+                            <button class="btn btn-sm btn-default">
+                                <span class="glyphicon glyphicon-thumbs-up"></span> Upvote
+                            </button>
+                            <button class="btn btn-sm btn-default">
+                                <span class="glyphicon glyphicon-thumbs-down"></span> Downvote
+                            </button>
+                            <button class="btn btn-sm btn-default">
+                                <span class="glyphicon glyphicon-comment"></span> Reply
+                            </button>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <hr>
+
+            <!--
+            &lt;!&ndash; Comment form &ndash;&gt;
+            <h3>Leave a comment</h3>
+            <p>Please keep in mind that comments are moderated and rel="nofollow" is in use. So, please do not use a spammy keyword or a domain as your name, or else it will be deleted. Thank you!</p>
+
+            <div class="well">
+                <form>
+                    <div class="form-group">
+                        <label for="contactName">Name</label>
+                        <input type="email" class="form-control" id="contactName" placeholder="Enter your name">
+                    </div>
+                    <div class="form-group">
+                        <label for="contactEmail">Email</label>
+                        <input type="email" class="form-control" id="contactEmail" placeholder="Enter email">
+                        <p class="help-block">Make sure you use a valid email address</p>
+                    </div>
+                    <div class="form-group">
+                        <label for="contactComment">Comment</label>
+                        <textarea class="form-control" id="contactComment"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </form>
+            </div>
+            <hr>
+
+            &lt;!&ndash; Pager &ndash;&gt;
+            <nav>
+                <ul class="pager">
+                    <li class="previous"><a href="#"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span> Older</a></li>
+                    <li class="next"><a href="#">Newer <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></li>
+                </ul>
+            </nav>
+-->
+        </div>
+        <div class="col-sm-4">
+            <!-- Search -->
+            <div class="well">
+                <h4 class="margin-t-0">Search</h4>
+                <form action="#">
+                    <div class="input-group">
+                        <label class="sr-only" for="search-form">Search the site</label>
+                        <input type="text" class="form-control" id="search-form">
+								<span class="input-group-btn">
+									<button class="btn btn-default" type="button">
+                                        <span class="glyphicon glyphicon-search"></span>
+                                        <span class="sr-only">Search</span>
+                                    </button>
+								</span>
+                    </div>
+                </form>
+            </div>
+
+            <!-- list group -->
+            <div class="list-group margin-b-3">
+                <a href="#" class="active list-group-item">Category 1</a>
+                <a href="#" class="list-group-item">Category 2</a>
+                <a href="#" class="list-group-item">Category 3</a>
+            </div>
+
+            <!-- Panel -->
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">Sidebar panel widget</h4>
+                </div>
+                <div class="panel-body">
+                    <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+                </div>
+            </div>
+
+            <!-- Panel -->
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">Sidebar panel widget</h4>
+                </div>
+                <div class="panel-body">
+                    <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <!-- /.row -->
+
+    <hr>
+    <footer class="margin-tb-3">
+        <div class="row">
+            <div class="col-lg-12">
+                <p>Copyright &copy; Sitename 2015</p>
+            </div>
+        </div>
+    </footer>
+</div>
+<!-- /.container-fluid -->
+
+<!-- JQuery scripts -->
+<script src="../js/jquery-1.11.2.min.js"></script>
+
+<!-- Bootstrap Core scripts -->
+<script src="../js/bootstrap.min.js"></script>
 </body>
 </html>
+
