first commit in a while (oops). refactored a lot, cleaned up lots of code as well. added comment viewing

--- a/src/web/html_static/index.html
+++ b/src/web/html_static/index.html
@@ -3,18 +3,20 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>Page title - Sitename</title>
+		<title>BLOG</title>
 
 		<!-- Bootstrap Core CSS file -->
-		<link rel="stylesheet" href="../css/bootstrap.min.css">
+		<link rel="stylesheet" href="/html_static/css/bootstrap.css">
 
 		<!-- Override CSS file - add your own CSS rules -->
-		<link rel="stylesheet" href="../css/styles.css">
+		<link rel="stylesheet" href="/html_static/css/styles.css">
+		<script src="/html_static/js/index.js"></script>
 
 		<!-- Conditional comment containing JS files for IE6 - 8 -->
 		<!--[if lt IE 9]>
-			<script src="../js/html5.js"></script>
-			<script src="../js/respond.min.js"></script>
+			<script src="/html_static/js/html5.js"></script>
+			<script src="/html_static/js/respond.min.js"></script>
+
 		<![endif]-->
 	</head>
 	<body>
@@ -72,10 +74,10 @@
 		<!-- /.container-fluid -->
 
 		<!-- JQuery scripts -->
-	    <script src="assets/js/jquery-1.11.2.min.js"></script>
+	    <script src="/html_static/js/jquery-1.11.2.min.js"></script>
 
 		<!-- Bootstrap Core scripts -->
-		<script src="assets/js/bootstrap.min.js"></script>
+		<script src="/html_static/js/bootstrap.min.js"></script>
   </body>
 </html>
 
